--- a/challenges+supervision.Rmd
+++ b/challenges+supervision.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Challenges AND Supervision Analyses"
 author: "Luis P. Prieto"
-date: "23/4/2021"
+date: "`r Sys.Date()`"
 output: 
   html_document:
     self_contained: yes
